--- a/frontend/src/components/Map/FilterEvent/Filter.css
+++ b/frontend/src/components/Map/FilterEvent/Filter.css
@@ -1,9 +1,5 @@
-.filterBox{
-    height: 900px;
-    width: 800px;
-}
 
-.filterBox .filters{
+.filters{
     border: 1px solid black;
     height: 100px;
     width: 704px;
@@ -12,7 +8,7 @@
     justify-content: space-between;
 }
 
-.filterBox .filters .oneFilter{
+.filters .oneFilter{
     height: 25px;
     width: 200px;
     display: flex;
