--- a/frontend/src/components/Taskbar/Taskbar.css
+++ b/frontend/src/components/Taskbar/Taskbar.css
@@ -14,6 +14,13 @@
     margin: 0px 20px;
 }
 
+.taskbar .links {
+    display: flex;
+    flex-direction: row;
+}
+
 .taskbar button {
     margin: 0px 20px;
+    height: 30px;
+    font-size: 20px;
 }
