--- a/frontend/src/components/Social/Form/Form.css
+++ b/frontend/src/components/Social/Form/Form.css
@@ -1,7 +1,8 @@
 .form{
     display: flex;
     width: 300px;
-    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .title-form{
