--- a/frontend/src/components/Social/Navigation/navigation.css
+++ b/frontend/src/components/Social/Navigation/navigation.css
@@ -7,7 +7,7 @@
     height: 70%;
     background-color: var(--bg-primary);
     border-radius: 15px;
-    padding: 1.5rem;
+    padding: 2.5rem;
     box-sizing: border-box;
 }
 
@@ -16,4 +16,8 @@
     width: 100%;
     justify-content: center;
     gap: 2rem;
+
+    padding-bottom: 1.5rem;
+    border-bottom: 3px solid black;
 }
+
