--- a/frontend/src/components/Social/Profile/Profile.css
+++ b/frontend/src/components/Social/Profile/Profile.css
@@ -1,18 +1,26 @@
-.container{
+:root{
+    --bg-profile: #34A0A4
+}
+
+.container-profile{
     display: flex;
     padding: 1rem;
     box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
-    width: 300px;
-    height: 100px;
-    background-color: rgb(109, 107, 107);
+    width: 90%;
+    height: 70px;
+    background-color: var(--bg-profile);
     border-radius: 5px;
 }
 
+.container-profile:hover{
+    cursor: pointer;
+}
+
 .profile{
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     background-color: white;
     border-radius: 100%;
 }
