--- a/frontend/src/components/Social/Messages/Message.css
+++ b/frontend/src/components/Social/Messages/Message.css
@@ -3,13 +3,13 @@
     height: 70%;
     background-color: white;
     border-radius: 15px;
+    padding: 0 2rem ;
 }
 
 .message-display .display{
     width: 100%;
     height: 80%;
-
-    border-bottom: 4px solid black;
+    border-bottom: 4px solid var(--bg-primary);
 }
 
 .message-display .text{
