--- a/frontend/src/components/Social/Text/Text.css
+++ b/frontend/src/components/Social/Text/Text.css
@@ -2,17 +2,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    gap: 1rem;
 }
 
 form .text{
     display: flex;
     width: 100%;
-    height: 20px;
-    background-color: grey;
+    height: 40px;
     gap: 2rem;
 }
 
 .text input{
     width: 80%;
+    height: 30px;
+    border-radius: 15px;
+    padding-left: .5rem;
+    border: 2px solid var(--bg-primary);
+    font-size: 1rem;
+}
+
+.text button{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    background-color: var(--bg-primary);
+    border: none;
+    color: white;
+    font-weight: 600;
 }
