--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,9 +1,12 @@
-/* * {
-    box-sizing: border-box;
-} */
+:root{
+    --bg-taskbar: #2b2b2b;
+}
 
 body {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: 100vh;
     margin: 0px;
 }
 
@@ -12,8 +15,25 @@ h1 {
 }
 
 button {
+    align-items: center;
+    background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+    border: none;
+    border-radius: 6px;
+    box-sizing: border-box;
+    color: #fff;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    padding: 1rem 2rem;    
+    font-size: 18px;
 }
+
+button:active {
+  box-shadow: #3c4fe0 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
 
 .links {
     display: flex;
