--- a/frontend/src/components/Taskbar/Taskbar.css
+++ b/frontend/src/components/Taskbar/Taskbar.css
@@ -1,10 +1,11 @@
 .taskbar {
-    height: fit-content;
     display: flex;
-    background-color: gray;
+    background-color: var(--bg-taskbar);
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 0 4rem;
+    height: 6rem;
+    box-sizing: border-box;
 }
 
 .taskbar h1  {
@@ -14,13 +15,4 @@
     margin: 0px 20px;
 }
 
-.taskbar .links {
-    display: flex;
-    flex-direction: row;
-}
 
-.taskbar button {
-    margin: 0px 20px;
-    height: 30px;
-    font-size: 20px;
-}
