--- a/frontend/src/components/Social/Messages/Message.css
+++ b/frontend/src/components/Social/Messages/Message.css
@@ -7,6 +7,8 @@
 }
 
 .message-display .display{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 80%;
     border-bottom: 4px solid var(--bg-primary);
