--- a/frontend/src/components/Map/Event/Event.css
+++ b/frontend/src/components/Map/Event/Event.css
@@ -5,8 +5,8 @@
 }
 .box{
     position: relative;
-    width: calc(350px - 30px);
-    height: calc(250px - 30px);
+    width: 320px;
+    height: 220px;
     background: #17469E;
     float: left;
     margin: 15px;
@@ -36,6 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .box .innerbox h1{
@@ -52,6 +53,7 @@
     justify-content: center;
     font-size: 30px;
     margin: 0;
+    color: rgb(0, 247, 255);
 }
 
 .box .content{
