--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -16,6 +16,27 @@
     padding: 40px 80px 60px 80px;
 }
 
+.modalEvent {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: gray 0px 5px 30px 0px;
+    background-color: white;
+    border: 2px solid whitesmoke;
+    border-radius: 15px;
+    position: absolute;
+    width: 500px;
+    height: 625px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 115px;
+    padding: 40px 80px 60px 80px;
+    z-index: 2;
+    transition: 0.25s;
+}
+
 .close-button {
     width: 25px;
     height: 25px;
