--- a/frontend/src/components/Social/Container/container.css
+++ b/frontend/src/components/Social/Container/container.css
@@ -9,7 +9,7 @@
     align-items: center;
     margin-top: 1.5rem;
     width: 100%;
-    height: 350px;
+    height: fit-content;
     gap: 2rem;
 
 }
