--- a/frontend/src/components/Social/Navigation/navigation.css
+++ b/frontend/src/components/Social/Navigation/navigation.css
@@ -3,6 +3,9 @@
 }
 
 .navi{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 80%;
     height: 70%;
     background-color: var(--bg-primary);
