--- a/frontend/src/components/Map/FilterEvent/Filter.css
+++ b/frontend/src/components/Map/FilterEvent/Filter.css
@@ -1,14 +1,37 @@
-
-.filters{
-    border: 1px solid black;
-    height: 100px;
-    width: 704px;
+.filterAndAdd {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+.filterAndAdd .filters{
+    border: 1px solid black;
+    height: 100px;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-.filters .oneFilter{
+.filterAndAdd .submit{
+    border: 1px solid black;
+    height: 100px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.filterAndAdd .addEvent{
+    border: 1px solid black;
+    height: 100px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.filterAndAdd .filters .oneFilter{
+    margin-left: 10px;
     height: 25px;
     width: 200px;
     display: flex;
