--- a/frontend/src/components/Social/Container/container.css
+++ b/frontend/src/components/Social/Container/container.css
@@ -6,10 +6,8 @@
 .container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 1.5rem;
     width: 100%;
-    height: fit-content;
-    gap: 2rem;
+    height: 100%;
+    gap: 1rem;
 
 }
