--- a/frontend/src/components/Social/Messages/Message.css
+++ b/frontend/src/components/Social/Messages/Message.css
@@ -12,6 +12,7 @@
     width: 100%;
     height: 80%;
     border-bottom: 4px solid var(--bg-primary);
+    overflow-y: scroll;
 }
 
 .message-display .text{
