--- a/frontend/src/components/Social/Navigation/navigation.css
+++ b/frontend/src/components/Social/Navigation/navigation.css
@@ -5,22 +5,7 @@
 .navi{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 80%;
-    height: 70%;
-    background-color: var(--bg-primary);
-    border-radius: 15px;
-    padding: 2.5rem;
-    box-sizing: border-box;
-}
-
-.selection{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    gap: 2rem;
-
-    padding-bottom: 1.5rem;
-    border-bottom: 3px solid black;
+    gap: .5rem;
+    width: 200px;
 }
 
