--- a/frontend/src/components/Social/Profile/Profile.css
+++ b/frontend/src/components/Social/Profile/Profile.css
@@ -10,7 +10,7 @@
     align-items: center;
     width: 90%;
     height: 70px;
-    background-color: var(--bg-profile);
+    background-color: var(--bg-tab);
     border-radius: 5px;
 }
 
