--- a/frontend/src/components/Social/Text/Text.css
+++ b/frontend/src/components/Social/Text/Text.css
@@ -22,11 +22,19 @@ form .text{
 }
 
 .text button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 50px;
     width: 50px;
     border-radius: 100%;
     background-color: var(--bg-primary);
     border: none;
-    color: white;
-    font-weight: 600;
+    cursor: pointer;
+}
+
+.text img{
+    width: 20px;
+    height: auto;
+    filter: invert(100%) sepia(0%) saturate(7450%) hue-rotate(189deg) brightness(125%) contrast(100%);
 }
