--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,6 +16,11 @@ h1 {
     margin: 0px;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .taskbar button {
     align-items: center;
     background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
