--- a/frontend/src/components/Social/Navigation/navigation.css
+++ b/frontend/src/components/Social/Navigation/navigation.css
@@ -2,10 +2,11 @@
     --bg-accent: #28282B; 
 }
 
-.navi{
+.navigation-main{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: .5rem;
-    width: 200px;
+    width: 300px;
 }
 
