--- a/frontend/src/components/Social/Profile/Profile.css
+++ b/frontend/src/components/Social/Profile/Profile.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 200px;
     height: 70px;
     background-color: var(--bg-tab);
     border-radius: 5px;
