--- a/frontend/src/components/Social/Sidebar/Sidebar.css
+++ b/frontend/src/components/Social/Sidebar/Sidebar.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-.sidebar .title{
+.sidebar .main-title{
     color: white;
     font-size: 2.5rem;
     margin-bottom:2rem;
@@ -29,6 +29,8 @@
     font-size: 1.5rem;
     margin-bottom: 1rem;
     font-weight: 400;
+    color: white;
+    text-align: start;
 }
 
 .sidebar .social-holder,
@@ -36,6 +38,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    
 
 }
 
