--- a/frontend/src/components/Social/Tab/Tab.css
+++ b/frontend/src/components/Social/Tab/Tab.css
@@ -4,3 +4,16 @@
     margin: 0 1rem;
     filter: invert(100%) sepia(0%) saturate(7450%) hue-rotate(189deg) brightness(125%) contrast(100%);
 }
+
+.select{
+    border: none;
+    font-size: 1rem;
+    font-weight: 600;
+    padding-bottom: .5rem;
+    cursor: pointer;
+    background-color: white;
+}
+
+.active{
+    border-bottom: 3px solid var(--bg-tab);
+}
