--- a/frontend/src/components/Social/Text/Text.css
+++ b/frontend/src/components/Social/Text/Text.css
@@ -16,8 +16,8 @@ form .text{
     width: 80%;
     height: 30px;
     border-radius: 15px;
-    padding-left: .5rem;
-    border: 2px solid var(--bg-primary);
+    padding-left: 1rem;
+    border: 2px solid var(--bg-tab);
     font-size: 1rem;
 }
 
@@ -28,7 +28,7 @@ form .text{
     height: 50px;
     width: 50px;
     border-radius: 100%;
-    background-color: var(--bg-primary);
+    background-color: var(--bg-tab);
     border: none;
     cursor: pointer;
 }
