--- a/frontend/src/components/Social/Topbar/Topbar.css
+++ b/frontend/src/components/Social/Topbar/Topbar.css
@@ -19,7 +19,7 @@
     gap: 1.5rem;
 }
 
-.topbar .title{
+.topbar .topbar-title{
     font-size: 2.5rem;
 }
 
@@ -30,7 +30,3 @@
     padding-bottom: .2rem;
     cursor: pointer;
 }
-
-/* .active{
-    border-bottom: 3px solid var(--bg-tab);
-} */
