--- a/frontend/src/components/Social/Group/Group.css
+++ b/frontend/src/components/Social/Group/Group.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    gap: 10rem;
+    gap: 5rem;
 }
 
 .subsection{
@@ -27,6 +27,23 @@
 .container{
     display: flex;
     align-items: center;
+}
+
+.request{
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 4rem;
+}
+
+.request-body{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    margin-bottom: 2rem;
+}
+
+.users{
+    flex-direction: row;
 }
 
 .container .add{
@@ -58,4 +75,35 @@
 .subsection .friend-container{
     display: flex;
     gap: 1rem;
+}
+
+.empty{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.empty .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+}
+
+.empty .container .caption{
+    width: 400px;
+    font-size: 4rem;
+    line-height: 1.2;
+}
+
+.empty img{
+    height: 650px;
+}
+
+.empty .caption .highlight{
+    color: var(--bg-tab);
+    font-weight: 600;
+    font-size: 4.3rem;
 }
