--- a/frontend/src/components/Map/Events/Events.css
+++ b/frontend/src/components/Map/Events/Events.css
@@ -1,5 +1,7 @@
 .eventBox {
-    border: 2px solid powderblue;
-    width: 700px;
-    height: 750px;
+    border-left: 5px;
+    border-left-style:solid;
+    border-color: var(--bg-tab);
+    width: 100%;
+    height: 650px;
 }
