--- a/frontend/src/components/Social/Group/Group.css
+++ b/frontend/src/components/Social/Group/Group.css
@@ -10,18 +10,23 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    background-color: var(--bg-white);
+    width: 80%;
+    padding: 1.5rem;
+    border-radius:15px;
 }
 
 .subsection .container{
     display: flex;
     gap: 1rem;
+    overflow-x: auto;
 }
 
 .section .subsection .title{
     font-size: 1.5rem;
-    text-align: start;
     font-weight: 600;
-    color: var(--bg-tab);
+    text-align: start;
+    color: black;
 }
 
 .container{
@@ -33,6 +38,7 @@
     flex-direction: column;
     align-items: flex-start;
     margin-left: 4rem;
+    font-weight: 400;
 }
 
 .request-body{
@@ -42,6 +48,9 @@
     margin-bottom: 2rem;
 }
 
+.request .request-body .title{
+    font-weight: 400;
+}
 .users{
     flex-direction: row;
 }
