--- a/frontend/src/components/Social/Navigation/navigation.css
+++ b/frontend/src/components/Social/Navigation/navigation.css
@@ -6,7 +6,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: .5rem;
+    gap: 1rem;
     width: 300px;
+    height: 70%;
+    background-color: var(--bg-white);
+    padding: 1.5rem;
+    border-radius: 15px;
+    overflow-y: auto;
 }
 
