--- a/frontend/src/components/Social/Topbar/Topbar.css
+++ b/frontend/src/components/Social/Topbar/Topbar.css
@@ -6,6 +6,7 @@
     width: auto;
     padding-top: 3rem;
     box-sizing: border-box;
+
 }
 
 .topbar .button {
@@ -21,6 +22,7 @@
 
 .topbar .topbar-title{
     font-size: 2.5rem;
+    color: white;
 }
 
 .select{
