--- a/frontend/src/components/Map/Event/Event.css
+++ b/frontend/src/components/Map/Event/Event.css
@@ -12,6 +12,7 @@
     margin: 15px;
     box-sizing: border-box;
     overflow: hidden;
+    border-radius: 20px;
     border: 5px solid #000;
 }
 .box .innerbox{
