--- a/frontend/src/components/Map/FilterEvent/Filter.css
+++ b/frontend/src/components/Map/FilterEvent/Filter.css
@@ -4,10 +4,8 @@
     justify-content: space-evenly;
     width: 100%;
     height:100px;
-    background-color: var(--bg-sidebar);
-    border-left: 5px;
-    border-left-style:solid;
-    border-color: var(--bg-tab);
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 .filterAndAdd .filters{
     height: 100px;
@@ -20,7 +18,7 @@
 
 .filterAndAdd .submit{
     height: 100px;
-    width: 150px;
+    width: 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
