--- a/frontend/src/components/Modal/EventModal/EventModal.css
+++ b/frontend/src/components/Modal/EventModal/EventModal.css
@@ -1,9 +1,9 @@
 .modal.modalEvent {
-    width: 510px;
-    height: 625px;
-    left: 15px;
+    width: 515px;
+    height: 550px;
+    left: 412.5px;
     right: 15px;
-    top: 115px;
+    top: 150px;
     z-index: 2;
 }
 
@@ -24,6 +24,15 @@
     height: 50px;
 }
 
+.modalEvent .title .buttonEvent{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    width: 150px;
+    height: 50px;
+    margin: 5px;
+}
+
 .modalEvent .content {
     display: flex;
     flex-direction: column;
@@ -36,15 +45,25 @@
     flex-direction: column;
 }
 
+.modalEvent .content .labelParticipants {
+    display: flex;
+    flex-direction: row;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .modalEvent .content label .description{
     display: flex;
     flex-direction: column;
     width: 500px;
-    height: 300px;
+    height: 250px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .modalEvent .content .eventdetails label {
     display: flex;
     flex-direction: row;
-
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
