Added all buildings to interactive map - Added filter to hide buildings on map - Added username state to sidebar - Added code to buildings - Fixed social socket connecting one time for each render

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -63,7 +63,7 @@ a {
 }
 
 /* Red Button Background */
-.button.red:hover::before {
+.button.red::before {
     background-image: radial-gradient(circle at center, #ff546e 0, var(--bg-sidebar) 100%);
 }
 
