--- a/frontend/src/components/Social/Sidebar/Sidebar.css
+++ b/frontend/src/components/Social/Sidebar/Sidebar.css
@@ -8,12 +8,19 @@
     box-sizing: border-box;
 }
 
-.sidebar .main-title{
+.sidebar .main-title {
     color: white;
     font-size: 2.5rem;
     margin-bottom:2rem;
     font-weight: 700;
     margin-top: 1rem;
+}
+
+.sidebar .welcome-text {
+    color: white;
+    font-size: 1.5rem;
+    margin-bottom: 4rem;
+    font-weight: 300;
 }
 
 .sidebar .tabs{
