--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,6 +2,7 @@
     --bg-taskbar: #2b2b2b;
     --bg-sidebar: #010b13;
     --bg-tab: #1AA7EC;
+    --bg: linear-gradient(125deg, hsl(218,20.4%,34.4%) 0%, hsla(218,20.4%,39.4%,0.9) 100%);
     --search: linear-gradient(125deg, rgba(5,170,255,1) 0%, rgba(0,65,238,1) 100%);
     --bg-white: #DFE1E6;
 }
