--- a/frontend/src/components/Social/Group/Group.css
+++ b/frontend/src/components/Social/Group/Group.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    gap: 5rem;
+    justify-content: space-evenly;
 }
 
 .subsection{
@@ -19,7 +19,7 @@
 .subsection .container{
     display: flex;
     gap: 1rem;
-    overflow-x: auto;
+    width: 100%;
 }
 
 .section .subsection .title{
@@ -37,8 +37,10 @@
 .request{
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 4rem;
+    padding-left: 4rem;
     font-weight: 400;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .request-body{
@@ -46,13 +48,15 @@
     flex-direction: column;
     gap: .5rem;
     margin-bottom: 2rem;
+    width: 100%;
 }
 
 .request .request-body .title{
     font-weight: 400;
 }
 .users{
-    flex-direction: row;
+    width: calc(100% - 88px);
+    overflow-x: auto;
 }
 
 .container .add{
