--- a/frontend/src/components/Social/MainSocial.css
+++ b/frontend/src/components/Social/MainSocial.css
@@ -1,8 +1,8 @@
 .main{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100vh;
+    width: calc(100% - 350px);
+    height: 100%;
     padding: 0 2rem;
     box-sizing: border-box;
     background: linear-gradient(125deg, hsl(218,20.4%,34.4%) 0%, hsla(218,20.4%,39.4%,0.9) 100%);
