--- a/frontend/src/components/Map/Pagination/Pagination.css
+++ b/frontend/src/components/Map/Pagination/Pagination.css
@@ -6,6 +6,10 @@
     justify-content: space-evenly;
 }
 
+.pageBox .prev{
+    transform: scaleX(-1);
+}
+
 .pageBox img:hover{
     cursor: pointer;
 }
