--- a/frontend/src/components/Modal/AddEventModal/AddEventModal.css
+++ b/frontend/src/components/Modal/AddEventModal/AddEventModal.css
@@ -8,6 +8,7 @@
 .modalEvent .contentAdd label .descriptionAdd{
     display: flex;
     flex-direction: column;
+    resize: none;
     width: 100%;
     height: 300px;
 }
