--- a/frontend/src/app/map/page.css
+++ b/frontend/src/app/map/page.css
@@ -1,10 +1,11 @@
 .map{
     display: flex;
-    justify-content: start;
-    width: fit-content;
+    justify-content: center;
+    width: 100%;
     height: 100%;
     background: var(--bg);
 }
+
 .map .filterAndEvents{
     width: 800px;
     height: 100%;
