--- a/frontend/src/components/Map/Event/Event.css
+++ b/frontend/src/components/Map/Event/Event.css
@@ -3,7 +3,7 @@
     padding:0;
     font-family: sans-serif;
 }
-.box{
+.ebox{
     position: relative;
     width: 320px;
     height: 220px;
@@ -15,7 +15,7 @@
     border-radius: 20px;
     border: 5px solid #000;
 }
-.box .innerbox{
+.ebox .innerbox{
     position: absolute;
     top: 0;
     left: 0;
@@ -29,7 +29,7 @@
     align-items: center;
 }
 
-.box:hover .innerbox{
+.ebox:hover .innerbox{
     bottom: 40px;
     width: 100%;
     height: 25%;
@@ -39,7 +39,7 @@
     cursor: pointer;
 }
 
-.box .innerbox h1{
+.ebox .innerbox h1{
     text-align: center;
     position: absolute;
     font-size: 40px;
@@ -47,7 +47,7 @@
     color: white;
 }
 
-.box:hover .innerbox h1{
+.ebox:hover .innerbox h1{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,7 +56,7 @@
     color: darkblue;
 }
 
-.box .content{
+.ebox .content{
     position: absolute;
     top: 100%;
     width:100%;
@@ -68,13 +68,13 @@
     
 }
 
-.box:hover .content{
+.ebox:hover .content{
     top: 50px;
     opacity: 1;
     
 }
 
-.box .content .description {
+.ebox .content .description {
     margin:0;
     height: 110px;
     width: 100%;
@@ -83,13 +83,13 @@
     word-break: break-all;
 }
 
-.box .content .eventdetails{
+.ebox .content .eventdetails{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.box .content .eventdetails .location {
+.ebox .content .eventdetails .location {
     margin:0;
     width: 250px;
     padding: 0;
@@ -98,7 +98,7 @@
     justify-content: flex-start;
 }
 
-.box .content .eventdetails .location .tooltiptext{
+.ebox .content .eventdetails .location .tooltiptext{
     visibility: hidden;
     width: 120px;
     background-color: black;
@@ -112,7 +112,7 @@
     z-index: 1;
 }
 
-.box .content .eventdetails .location:hover .tooltiptext {
+.ebox .content .eventdetails .location:hover .tooltiptext {
     visibility: visible;
     width: 120px;
     bottom: 35%;
@@ -120,7 +120,7 @@
     margin-left: -60px;
   }
 
-  .box .content .eventdetails .date .tooltiptext{
+  .ebox .content .eventdetails .date .tooltiptext{
     visibility: hidden;
     width: 120px;
     background-color: black;
@@ -134,14 +134,14 @@
     z-index: 1;
 }
 
-.box .content .eventdetails .date:hover .tooltiptext {
+.ebox .content .eventdetails .date:hover .tooltiptext {
     visibility: visible;
     width: 120px;
     bottom: 35%;
     margin-left: -60px;
   }
 
-.box .content .eventdetails .date {
+.ebox .content .eventdetails .date {
     margin:0;
     width: 200px;
     padding: 0;
