--- a/frontend/src/components/Map/Header/Header.css
+++ b/frontend/src/components/Map/Header/Header.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
     justify-content: start;
-    color: black;
+    color: white;
     font-size: 2.5rem;
     font-weight: 400;
     padding-top: 4rem;
