--- a/frontend/src/components/Map/Events/Events.css
+++ b/frontend/src/components/Map/Events/Events.css
@@ -1,4 +1,7 @@
 .eventBox {
     width: 100%;
-    height: 550px;
+    height: 500px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
