--- a/frontend/src/components/Map/Pagination/Pagination.css
+++ b/frontend/src/components/Map/Pagination/Pagination.css
@@ -1,6 +1,7 @@
 .pageBox {
     height: 50px;
     width: 100%;
+    margin-top: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
