--- a/frontend/src/components/Modal/AddEventModal/AddEventModal.css
+++ b/frontend/src/components/Modal/AddEventModal/AddEventModal.css
@@ -15,6 +15,7 @@
 
 .modalEvent .contentAdd label .titleAdd{
     display: flex;
+    resize: none;
     flex-direction: column;
     width: 100%;
     height: 20px;
