--- a/frontend/src/components/Body/Body.css
+++ b/frontend/src/components/Body/Body.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     display: flex;
+    padding: 0rem 10rem;
     overflow: hidden;
 }
 
@@ -22,6 +23,9 @@
 .title{
     font-size: 5rem;
     text-align: center;
+    width: 400px;
+    text-align: center;
+    color: white;
 }
 
 .right{
