--- a/frontend/src/components/Social/Navigation/navigation.css
+++ b/frontend/src/components/Social/Navigation/navigation.css
@@ -5,13 +5,16 @@
 .navigation-main{
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
+    flex-grow: 0;
     align-items: center;
     gap: 1rem;
-    width: 300px;
+    width: 200px;
     height: 70%;
     background-color: var(--bg-white);
     padding: 1.5rem;
     border-radius: 15px;
     overflow-y: auto;
+    margin-top: 2.5rem;
 }
 
