--- a/frontend/src/components/Social/Sidebar/Sidebar.css
+++ b/frontend/src/components/Social/Sidebar/Sidebar.css
@@ -1,11 +1,13 @@
 .sidebar{
     display: flex;
     flex-direction: column;
+    flex: 1 0 auto;
     height: 100%;
     width: 350px;
     background-color: var(--bg-sidebar);
     padding: 2rem;
     box-sizing: border-box;
+    position: relative;
 }
 
 .sidebar .main-title {
@@ -56,3 +58,55 @@
     gap: 1rem;
     margin-left: 1rem;
 }
+
+.sidebar .button-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 4rem;
+}
+
+.sidebar .button-container .button.join{
+    width: 70%;
+    margin-left: 1rem;
+}
+
+.button.join img{
+    width: 20px;
+    height: auto;
+    margin: 0 1rem;
+    filter: invert(100%) sepia(0%) saturate(7450%) hue-rotate(189deg) brightness(125%) contrast(100%);
+}
+
+.mascot{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+    position: absolute;
+    bottom: -200px;
+    left: 0;
+    transition: 500ms ease-in-out;
+}
+
+.mascot:hover{
+    gap:2.5rem;
+    bottom: 50px;
+    cursor: pointer;
+    transition: 600ms ease-out;
+}
+
+
+.mascot img{
+    width: 90%;
+}
+
+.mascot .message{
+    width: fit-content;
+    padding: 1rem;
+    box-sizing: border-box;
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
