--- a/frontend/src/components/Social/Text/Text.css
+++ b/frontend/src/components/Social/Text/Text.css
@@ -5,7 +5,7 @@
     gap: 1rem;
     background-color: var(--bg-taskbar);
     height: fit-content;
-    width: 900px;
+    width: 100%;
     padding: .2rem 0.2rem;
     border-radius: 60px;
 }
