--- a/frontend/src/components/Social/Topbar/Topbar.css
+++ b/frontend/src/components/Social/Topbar/Topbar.css
@@ -2,11 +2,9 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    height: 150px;
+    height: fit-content;
     width: auto;
-    padding-top: 3rem;
     box-sizing: border-box;
-
 }
 
 .topbar .button {
