--- a/frontend/src/app/map/page.css
+++ b/frontend/src/app/map/page.css
@@ -1,6 +1,6 @@
 .map{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     width: 100%;
     height: 100%;
     background: var(--bg);
