--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -61,3 +61,15 @@
     padding-inline: 0px;
     padding-block: 0px;
 }
+
+.modal-form .button.active {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    font-weight: 500;
+}
+
+.modal-form .button.active.submit {
+    margin-top: 20px;
+}
